--- a/app/ui/login.html
+++ b/app/ui/login.html
@@ -10,7 +10,7 @@
     <h1>Welcome to My Blog App</h1><br/>
     Email: <input type="text" ng-model="email"> <br/>
     Password: <input type="password" ng-model="password"><br/>
-    <input type="button" value="Login" ng-click="postdata(name, age, adress)" /> <br/><br/>
+    <input type="button" value="Login" ng-click="postdata()" /> <br/><br/>
 
 </div>
 </div>
