Register page is implemented.

--- a/app/ui/login.html
+++ b/app/ui/login.html
@@ -12,6 +12,7 @@
     Password: <input type="password" ng-model="password"><br/>
     <input type="button" value="Login" ng-click="postdata()" /> <br/><br/>
 
+    <a href="/ui/register.html">Register</a>
 </div>
 </div>
 </body>
