Minor fixes and refactoring.

--- a/app/ui/followeeposts.html
+++ b/app/ui/followeeposts.html
@@ -17,10 +17,10 @@
 <body ng-controller="followeePostsController">
 <div>
     <div class="floatleft">
-        <img class="imgclass" src="./img/profile.png">
+        <a href="home.html"><img class="imgclass" src="./img/profile.png"></a>
     </div>
     <div>
-        <span class="bold">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
+        <span class="bold highrow">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
     </div>
 </div>
 <div>
@@ -34,7 +34,7 @@
                 <div class="div2">
                     <span><b>{{post.title}}</b></span><br/>
                     <span>{{post.text}}</span><br/>
-                    <span><i>{{post.createdAt}}</i></span>
+                    <span>at <i>{{post.createdAt}}</i> by <b><i>{{post.publisherName}}</i></b></span>
                 </div>
             </div>
         </li>
