--- a/app/ui/followees.html
+++ b/app/ui/followees.html
@@ -18,10 +18,10 @@
 <div>
     <div>
         <div class="floatleft">
-            <img class="imgclass" src="./img/profile.png">
+            <a href="home.html"><img class="imgclass" src="./img/profile.png"></a>
         </div>
         <div>
-            <span class="bold">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
+            <span class="bold highrow">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
         </div>
     </div>
     <div>
