--- a/app/ui/suggestions.html
+++ b/app/ui/suggestions.html
@@ -14,14 +14,14 @@
 
     <title>Suggestions</title>
 </head>
-<body ng-controller="otherUsersController">
+<body ng-controller="suggestionController">
 <div>
     <div>
         <div class="floatleft">
-            <img class="imgclass" src="./img/profile.png">
+            <a href="home.html"><img class="imgclass" src="./img/profile.png"></a>
         </div>
         <div>
-            <span class="bold">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
+            <span class="bold highrow">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
         </div>
     </div>
     <div>
