--- a/app/ui/home.html
+++ b/app/ui/home.html
@@ -18,7 +18,7 @@
 <body ng-controller="mainController as mc">
 <div>
     <div class="header">
-        Hey, <span id="current-user"></span>!</h1><br/><br/>
+        Hey, <span id="current-user"></span>!</h1><a href="login.html" class="bold pad20 midrow">Logout</a><br/>
     </div>
     <div>
         <ul class="ulclass">
