--- a/app/ui/myposts.html
+++ b/app/ui/myposts.html
@@ -21,7 +21,8 @@
             <a href="home.html"><img class="imgclass" src="./img/profile.png"></a>
         </div>
         <div>
-            <span class="bold midrow">Merhaba </span><a id="current-user" href="home.html" class="bold"></a><br/>
+            <span class="bold midrow">Merhaba </span><a id="current-user" href="home.html" class="bold"></a>
+            <a href="login.html" class="bold pad20 midrow">Logout</a><br/>
         </div>
     </div>
     <div>
